# lab3_os

./: README.md
ex1/: CMakeLists.txt
ex1/include/: functions.h
ex1/src/: functions.c  main.c
ex2/all_in_main/: CMakeLists.txt
ex2/all_in_main/include/: functions.h
ex2/all_in_main/src/: functions.c  main.c
ex2/include/: functions.h
ex2/src/: functions.c  main.c
ex2/using_threads/: CMakeLists.txt
ex2/using_threads/include/: functions.h
ex2/using_threads/src/: functions.c  main.c
ex3/: CMakeLists.txt
ex3/include/: functions.h
ex3/src/: functions.c  main.c
ex4/: CMakeLists.txt
ex4/include/: functions.h
ex4/src/: functions.c  main.c
ex5/: CMakeLists.txt
ex5/include/: functions.h
ex5/src/: functions.c  main.c
